--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/config": "^2.2.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
@@ -55,6 +56,7 @@
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "jest": "28.1.3",
+    "mongoose": "^6.6.7",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
