--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "jest": "28.1.3",
     "mongoose": "^6.6.7",
     "prettier": "^2.3.2",
