--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
+### MongoDB
 MONGO_LOGIN = user
 MONGO_PASSWORD = password
 MONGO_HOST = localhost
 MONGO_PORT = 27018
 MONGO_AUTH_DB = admin
+
+### JWT
+JWT_SECRET = Xqey9f2J9r6gUTLV
